did recursive evaluation
needs to be fixed, but I think a re-write with history support should
fix the slowness woes that are happening now

--- a/dynetkat.cabal
+++ b/dynetkat.cabal
@@ -60,7 +60,8 @@ library
 
     -- Modules exported by the library.
     exposed-modules:  MyLib,
-                      Data.NetKat
+                      Data.NetKat,
+                      Data.DyNetKat
 
     -- Modules included in this library but not exported.
     -- other-modules:
@@ -69,7 +70,8 @@ library
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.16.4.0
+    build-depends:    base ^>=4.16.4.0,
+                      containers
 
     -- Directories containing source files.
     hs-source-dirs:   src
